--- a/app/src/main/res/layout/demo_pull.xml
+++ b/app/src/main/res/layout/demo_pull.xml
@@ -14,14 +14,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="listView"/>
+            android:textAllCaps="false"
+            android:text="@string/demo_listview"/>
 
         <Button
             android:id="@+id/recyclerview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="recyclerview"/>
+            android:textAllCaps="false"
+            android:text="@string/demo_recyclerview"/>
 
     </LinearLayout>
 
