--- a/app/src/main/res/layout/demo_recyclerview.xml
+++ b/app/src/main/res/layout/demo_recyclerview.xml
@@ -17,6 +17,7 @@
         android:divider="#e9e9e9"
         android:dividerHeight="2px"
         android:headerDividersEnabled="false"
+        style="@style/list_scrollbar_style"
 
         app:recyclerview_pull_capacity="PULL_DOWN|AUTO_PULLUP"
         app:recyclerview_pull_header_classname="com.open.widgets.listview.IListViewHeader"
