--- a/app/src/main/res/layout/demo_recyclerview.xml
+++ b/app/src/main/res/layout/demo_recyclerview.xml
@@ -34,7 +34,7 @@
         android:layout_gravity="right"
         android:background="@drawable/bg_corner"
         android:textColor="#FFFFFFFF"
-        android:text="LinearLayout 0"/>
+        android:text="LinearLayout"/>
 
     <TextView
         android:id="@+id/grid"
@@ -46,7 +46,7 @@
         android:layout_gravity="right"
         android:background="@drawable/bg_corner"
         android:textColor="#FFFFFFFF"
-        android:text="GridLayout 0"/>
+        android:text="GridLayout"/>
 
     <TextView
         android:id="@+id/staggeredGrid"
@@ -58,7 +58,7 @@
         android:layout_gravity="right"
         android:background="@drawable/bg_corner"
         android:textColor="#FFFFFFFF"
-        android:text="StaggeredGridLayout 0"/>
+        android:text="StaggeredGridLayout"/>
 
 </FrameLayout>
 
